--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="description" content="Phd Candidate in Biology Passionate About Advancing Cancer Treatment and Understanding.">
+    <meta name="author" content="Maedeh Yousefinia">
+    <title>Maedeh Yousefinia</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -13,6 +15,7 @@
         href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" href="./fav.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -23,7 +26,7 @@
                     <div class="logo">
                         <span>M</span>
                     </div>
-                    <h1 class="navbar-brand" href="#">Maedeh</h1>
+                    <h1 class="navbar-brand" href="#">Mahee</h1>
                 </a>
                 <ul class="main_nav">
                     <!-- <li href="#Home"><a href="#Home">Home</a></li> -->
@@ -83,7 +86,7 @@
             <section id="Home">
                 <div class="page page-card">
                     <div class="hero_img">
-                        <img alt="Picture of me" src="/photo_2023-09-29_11-26-57.jpg" />
+                        <img alt="Maedeh Yousefinia" src="/MaedehYousefinia.webp">
                         <div class="social_media">
                             <div class="btn-container">
                                 <a href="https://www.linkedin.com/in/maedehyousefinia/" target="_blank"
@@ -100,20 +103,20 @@
                     <article>
                         <h1>Maedeh Yousefinia</h1>
                         <p>
-                            <span>.</span> Significant technical expertise in laboratory
+                            Significant technical expertise in laboratory
                             procedures and scientific methods, due to working in a leading
                             medical equipment manufacturing company, with the result of 4
                             years as the head of laboratory quality control for the leading
                             brands KODEX NACH in Iran.
                         </p>
                         <p>
-                            <span>.</span> Keen interest and ability to teach scientific
+                            Keen interest and ability to teach scientific
                             subjects, due to my mastery of chemistry and mathematics, and my
                             ability to analyze students and communicate the material,
                             resulting in an 80% A grade for all of my students.
                         </p>
                         <p>
-                            <span>.</span> Passionate about advancing cancer treatment and
+                            Passionate about advancing cancer treatment and
                             understanding, demonstrated by writing three articles on cancer
                             after reading hundreds of articles and completing several
                             courses, despite not having access to laboratory facilities.
@@ -221,13 +224,22 @@
                         <h4>Laboratory Research</h4>
                     </div>
                     <div class="card-s">
+                        <h4>Project Management</h4>
+                    </div>
+                    <div class="card-s">
                         <h4>Critical Thinking</h4>
                     </div>
                     <div class="card-s">
-                        <h4>Problem solving</h4>
+                        <h4>Problem-solving</h4>
                     </div>
                     <div class="card-s">
                         <h4>Communication</h4>
+                    </div>
+                    <div class="card-s">
+                        <h4>Attention to detail</h4>
+                    </div>
+                    <div class="card-s">
+                        <h4>Teamwork</h4>
                     </div>
                 </div>
             </section>
@@ -263,15 +275,14 @@
                     <div class="vertical_line"></div>
                     <div class="card-wrapper">
                         <div class="card">
-                            <h4>Cell Culture, Medical Internship</h4>
+                            <h4>Cell Culture and Investigation of Fundamental Biology of Normal Cells: Medical Internship</h4>
                             <p>Materials and Energy Research Center, Karaj, Iran</p>
                         </div>
                         <div class="card">
                             <h4>
-                                Produce Bioplastics From Starch, Special Assistant to
-                                Rahmatollah Tavakoli, Professor of Organic Chemistry
+                                Produce Bioplastics From Starch: Special Assistant to Rahmatollah Tavakoli, Professor of Organic Chemistry
                             </h4>
-                            <p> Maziar Higher Education Institute, Royan, Iran</p>
+                            <p>Maziar Higher Education Institute, Royan, Iran</p>
                         </div>
                     </div>
                 </div>
@@ -301,22 +312,19 @@
                     <div class="card-wrapper">
                         <div class="card">
                             <h4>Private Chemistry and Mathematics Tutor</h4>
-                            <p>Rasht Iran 2019 - Present</p>
+                            <p>Rostamabad, Iran | 2019 - Present</p>
                         </div>
                         <div class="card">
-                            <h4>Laboratory Quality Control Head, Anjir Talaee Co.</h4>
-                            <p>Karaj, Iran 2016 - 2019</p>
+                            <h4>Senior Laboratory Quality Control Specialist, Anjir Talaee Co.</h4>
+                            <p>Karaj, Iran | 2016 - 2019</p>
                         </div>
                         <div class="card">
                             <h4>Technical Trainer, Anjir Talaee Co.</h4>
-                            <p>Karaj, Iran 2016 - 2019</p>
+                            <p>Karaj, Iran | 2016 - 2019</p>
                         </div>
                         <div class="card">
-                            <h4>
-                                Laboratory Quality Control Head, Saramad Teb Parayeh, Karaj,
-                                Iran 2016 - 2016
-                            </h4>
-                            <p>Rasht Iran 2019 - Present</p>
+                            <h4>Laboratory Quality Control Expert, Saramad Teb Parayeh</h4>
+                            <p>Karaj, Iran | 2016 - 2016</p>
                         </div>
                     </div>
                 </div>
@@ -347,35 +355,26 @@
                     <div class="card-wrapper">
                         <div class="card">
                             <h4>
-                                The Enigma of Telomere: How Length Affects Stem Cell Behaviour
+                                M.Yousefinia, “The Enigma of Telomere: How Length Affects Stem Cell Behaviour” (Under Review), International Journal of Pediatrics, 2023
                             </h4>
                             <p>
-                                International Journal of Pediatrics. This review article
-                                examines the role of telomere length in stem cell function and
-                                differentiation.
+                                This review article examines the role of telomere length in stem cell function and differentiation.
                             </p>
                         </div>
                         <div class="card">
                             <h4>
-                                Cancer Stem Cells: the Key Players in Tumor Progression and
-                                Therapy Resistance
+                                M. Yousefinia, “Cancer Stem Cells: the Key Players in Tumor Progression and Therapy Resistance” (Under Review), Journal of Cellular Biochemistry, 2023
                             </h4>
                             <p>
-                                This review article discusses the biology of cancer stem cells
-                                and their role in tumor progression and resistance to
-                                therapy..
+                                This review article discusses the biology of cancer stem cells and their role in tumor progression and resistance to therapy.
                             </p>
                         </div>
                         <div class="card">
                             <h4>
-                                Empowering Women: Global Perspectives on Breast Cancer
-                                Awareness and Treatment
+                                M. Yousefinia, “Empowering Women: Global Perspectives on Breast Cancer Awareness and Treatment” (In Preparation)
                             </h4>
                             <p>
-                                This review article examines the current state of breast
-                                cancer awareness and treatment in different parts of the
-                                world, with a focus on the unique challenges faced by women in
-                                developing countries.
+                                This review article examines the current state of breast cancer awareness and treatment in different parts of the world, with a focus on the unique challenges faced by women in developing countries.
                             </p>
                         </div>
                     </div>
@@ -402,13 +401,8 @@
                     <div class="card-wrapper">
                         <div class="card">
                             <h4>
-                                The Enigma of Telomere: How Length Affects Stem Cell Behaviour
+                                Ranked 1st in the state of Gilan in the Chemistry Olympiad, 2008
                             </h4>
-                            <p>
-                                International Journal of Pediatrics. This review article
-                                examines the role of telomere length in stem cell function and
-                                differentiation.
-                            </p>
                         </div>
                     </div>
                 </div>
@@ -469,102 +463,92 @@
                 </div>
                 <div class="card">
                     <h4>
-                        Cancer Biology, Johns Hopkins University on Coursera
-                        <p class="p1">2023</p>
+                        Cancer Biology
+                        <p class="p1">Johns Hopkins University on Coursera, 2023</p>
                     </h4>
                 </div>
                 <div class="card">
                     <h4>
-                        Advanced Reproducibility in Cancer Informatics, Johns Hopkins
-                        University on Coursera
-                        <p class="p1">2023</p>
+                        Advanced Reproducibility in Cancer Informatics
+                        <p class="p1">Johns Hopkins University on Coursera, 2023</p>
                     </h4>
                 </div>
                 <div class="card">
                     <h4>
-                        Documentation and Usability for Cancer Informatics, Johns
-                        Hopkins University on Coursera
-                        <p class="p1">2023</p>
+                        Documentation and Usability for Cancer Informatics
+                        <p class="p1">Johns Hopkins University on Coursera, 2023</p>
                     </h4>
                 </div>
                 <div class="card">
                     <h4>
-                        Leadership for Cancer Informatics Research, Johns Hopkins
-                        University on Coursera
-                        <p class="p1">2023</p>
+                        Leadership for Cancer Informatics Research
+                        <p class="p1">Johns Hopkins University on Coursera, 2023</p>
                     </h4>
                 </div>
                 <div class="card">
                     <h4>
-                        Computing for Cancer Informatics, Johns Hopkins University on
-                        Coursera
-                        <p class="p1">2023</p>
+                        Computing for Cancer Informatics
+                        <p class="p1">Johns Hopkins University on Coursera, 2023</p>
                     </h4>
                 </div>
                 <div class="card">
                     <h4>
-                        Artificial Intelligence for Breast Cancer Detection, Johns
-                        Hopkins University on Coursera
-                        <p class="p1">2023</p>
+                        Artificial Intelligence for Breast Cancer Detection
+                        <p class="p1">Johns Hopkins University on Coursera, 2023</p>
                     </h4>
                 </div>
                 <div class="card">
                     <h4>
-                        Introduction to Breast Cancer, Yale University on Coursera
-                        <p class="p1">2023</p>
+                        Introduction to Breast Cancer
+                        <p class="p1">Yale University on Coursera, 2023</p>
                     </h4>
                 </div>
                 <div class="card">
                     <h4>
-                        The Science of Stem Cells, American Museum of Natural History
-                        on Coursera
-                        <p class="p1">2023</p>
+                        The Science of Stem Cells
+                        <p class="p1">American Museum of Natural History on Coursera, 2023</p>
                     </h4>
                 </div>
                 <div class="card">
                     <h4>
-                        Health After Cancer: Cancer Survivorship for Primary Care,
-                        Stanford University on Coursera
-                        <p class="p1">2023</p>
+                        Health After Cancer: Cancer Survivorship for Primary Care
+                        <p class="p1">Stanford University on Coursera, 2023</p>
                     </h4>
                 </div>
                 <div class="card">
                     <h4>
-                        Cervical Cancer Risk Prediction Using Machine Learning,
-                        Coursera Project Network
-                        <p class="p1">2023</p>
+                        Cervical Cancer Risk Prediction Using Machine Learning
+                        <p class="p1">Coursera Project Network, 2023</p>
                     </h4>
                 </div>
                 <div class="card">
                     <h4>
-                        TOEFL Preparation, University of California, Irvine on
-                        Coursera
-                        <p class="p1">2023</p>
+                        TOEFL Preparation
+                        <p class="p1">University of California, Irvine on Coursera, 2023</p>
                     </h4>
                 </div>
                 <div class="card">
                     <h4>
-                        ISO 9001, Industrial Engineering House, Tehran, Iran
-                        <p class="p1">2019</p>
+                        ISO 9001
+                        <p class="p1">Industrial Engineering House, Tehran, Iran, 2019</p>
                     </h4>
                 </div>
                 <div class="card">
                     <h4>
-                        ISO 14001, Industrial Engineering House, Tehran, Iran
-                        <p class="p1">2019</p>
+                        ISO 14001
+                        <p class="p1">Industrial Engineering House, Tehran, Iran, 2019</p>
                     </h4>
                 </div>
                 <div class="card">
                     <h4>
-                        Quality Control Master Program, Industrial Engineering House,
-                        Tehran, Iran
-                        <p class="p1">2018</p>
+                        5S Methodology
+                        <p class="p1">Industrial Engineering House, Tehran, Iran, 2018</p>
                     </h4>
                 </div>
                 <div class="card">
                     <h4>
-                        5S Methodology, Industrial Engineering House, Tehran, Iran
-                        <p class="p1">2018</p>
+                        Quality Control Master Program
+                        <p class="p1">Industrial Engineering House, Tehran, Iran, 2018</p>
                     </h4>
                 </div>
             </div>
