--- a/index.html
+++ b/index.html
@@ -103,23 +103,20 @@
                     <article>
                         <h1>Maedeh Yousefinia</h1>
                         <p>
-                            Significant technical expertise in laboratory
-                            procedures and scientific methods, due to working in a leading
-                            medical equipment manufacturing company, with the result of 4
-                            years as the head of laboratory quality control for the leading
-                            brands KODEX NACH in Iran.
+                            Significant technical expertise in laboratory procedures and scientific
+                            methods, due to working in a leading medical equipment manufacturing company, with the
+                            result of 3 years as the senior laboratory quality control specialist for the leading brands KODEX
+                            NACH.
                         </p>
                         <p>
-                            Keen interest and ability to teach scientific
-                            subjects, due to my mastery of chemistry and mathematics, and my
-                            ability to analyze students and communicate the material,
+                            Keen interest and ability to teach scientific subjects, due to my mastery of
+                            chemistry and mathematics, and my ability to analyze students and communicate the material,
                             resulting in an 80% A grade for all of my students.
                         </p>
                         <p>
-                            Passionate about advancing cancer treatment and
-                            understanding, demonstrated by writing three articles on cancer
-                            after reading hundreds of articles and completing several
-                            courses, despite not having access to laboratory facilities.
+                            Passionate about advancing cancer treatment and understanding, demonstrated
+                            by writing three articles on cancer after reading hundreds of articles and completing
+                            several courses, despite not having access to laboratory facilities.
                         </p>
                         <div class="top-btn">
                             <a href="./MaedehYousefiniaCV.pdf" download="" target="_blank" rel="noopener">
@@ -355,7 +352,7 @@
                     <div class="card-wrapper">
                         <div class="card">
                             <h4>
-                                M.Yousefinia, “The Enigma of Telomere: How Length Affects Stem Cell Behaviour” (Under Review), International Journal of Pediatrics, 2023
+                                M. Yousefinia, “The Enigma of Telomere: How Length Affects Stem Cell Behaviour” (Under Review), International Journal of Pediatrics, 2023
                             </h4>
                             <p>
                                 This review article examines the role of telomere length in stem cell function and differentiation.
