--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
                         </div>
                     </div>
                     <article>
-                        <h1>Maedeh Yousefinia</h1>
+                        <h1>
+                            Maedeh Yousefinia
+                        </h1>
                         <p>
                             Significant technical expertise in laboratory procedures and scientific
                             methods, due to working in a leading medical equipment manufacturing company, with the
