Update Research Word

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <!-- <li href="#Home"><a href="#Home">Home</a></li> -->
                     <li><a href="#Education">Education</a></li>
                     <li><a href="#skills">Skills</a></li>
-                    <li><a href="#Researche">Researche Experience</a></li>
+                    <li><a href="#Research">Research Experience</a></li>
                     <li><a href="#work">Work Experience</a></li>
                     <li><a href="#Publication">Publication</a></li>
                     <li><a href="#Awards">Awards and Honors</a></li>
@@ -58,7 +58,7 @@
                     <li href="#Home" onclick="collapse()"><a href="#Home">Home</a></li>
                     <li><a href="#Education" onclick="collapse()">Education</a></li>
                     <li><a href="#skills" onclick="collapse()">Skills</a></li>
-                    <li><a href="#Researche" onclick="collapse()">Researche Experience</a></li>
+                    <li><a href="#Research" onclick="collapse()">Research Experience</a></li>
                     <li><a href="#Work" onclick="collapse()">Work Experience</a></li>
                     <li><a href="#Publication" onclick="collapse()">Publication</a></li>
                     <li><a href="#Awards" onclick="collapse()">Awards and Honors</a></li>
@@ -70,8 +70,8 @@
                     <li id="Home-li"><a href="#Home">Home</a></li>
                     <li id="Education-li"><a href="#Education">Education</a></li>
                     <li id="skills-li"><a href="#skills">Skills</a></li>
-                    <li id="Researche-li">
-                        <a href="#Researche">Researche Experience</a>
+                    <li id="Research-li">
+                        <a href="#Research">Research Experience</a>
                     </li>
                     <li id="Work-li"><a href="#Work">Work Experience</a></li>
                     <li id="Publication-li"><a href="#Publication">Publication</a></li>
@@ -242,7 +242,7 @@
                     </div>
                 </div>
             </section>
-            <section id="Researche">
+            <section id="Research">
                 <div class="section-header">
                     <div class="section-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="34" height="33" viewBox="0 0 34 33" fill="none">
@@ -267,7 +267,7 @@
                         </svg>
                     </div>
                     <div class="section-title">
-                        <h2>Researche Experience</h2>
+                        <h2>Research Experience</h2>
                     </div>
                 </div>
                 <div class="section-wrapper">
