--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <nav>
                 <a href="#Home" class="brand_container">
                     <div class="logo">
-                        <span>M</span>
+                        <img src="Mahee.png" alt="Mahee Logo">
                     </div>
                     <h1 class="navbar-brand" href="#">Mahee</h1>
                 </a>
